# serializer version: 1
# name: test_entities[default]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 System status',
        'id': '01:145038',
        'working_schema': dict({
          'orphans': list([
          ]),
          'stored_hotwater': dict({
          }),
          'system': dict({
            'appliance_control': '10:123456',
          }),
          'underfloor_heating': dict({
          }),
          'zones': dict({
            '00': dict({
              '_name': None,
              'actuators': list([
              ]),
              'class': None,
              'sensor': None,
            }),
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.controller_01_145038_system_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'active_faults': None,
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 Active fault',
        'id': '01:145038',
        'latest_event': None,
        'latest_fault': None,
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.controller_01_145038_active_fault',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zone 0 Window open',
        'id': '01:145038_00',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.zone_0_window_open',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 CH active',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator-off',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_ch_active',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 CH enabled',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator-off',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_ch_enabled',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Cooling active',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:snowflake-off',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_cooling_active',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Cooling enabled',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:snowflake-off',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_cooling_enabled',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 DHW active',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:water-off',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_dhw_active',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 DHW enabled',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:water-off',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_dhw_enabled',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Flame active',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:fire-off',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_flame_active',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 DHW blocking',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_dhw_blocking',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 OTC active',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_otc_active',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Summer mode',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_summer_mode',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Fault present',
        'id': '10:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.otb_10_123456_fault_present',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'battery_level': 'N/A',
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'THM 03:123456 Battery',
        'id': '03:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.thm_03_123456_battery',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'config': dict({
          'enforce_known_list': True,
        }),
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HGI 18:006402 Gateway status',
        'id': '18:006402',
        'is_evofw3': True,
        'known_list': list([
          dict({
            '01:145038': dict({
              'class': 'CTL',
            }),
          }),
          dict({
            '03:123456': dict({
              'class': 'THM',
              'faked': True,
            }),
          }),
          dict({
            '10:123456': dict({
              'class': 'OTB',
            }),
          }),
          dict({
            '18:006402': dict({
              'class': 'HGI',
            }),
          }),
        ]),
        'schema': dict({
          '01:145038': dict({
            'system': dict({
              'appliance_control': '10:123456',
            }),
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.hgi_18_006402_gateway_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 System info',
        'id': '01:145038',
        'working_schema': dict({
          'orphans': list([
          ]),
          'stored_hotwater': dict({
          }),
          'system': dict({
            'appliance_control': '10:123456',
          }),
          'underfloor_heating': dict({
          }),
          'zones': dict({
            '00': dict({
              '_name': None,
              'actuators': list([
              ]),
              'class': None,
              'sensor': None,
            }),
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.controller_01_145038_system_info',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '01:145038',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 Heat demand',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator-off',
        'id': '01:145038',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.controller_01_145038_heat_demand',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zone 0 Heat demand',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator-off',
        'id': '01:145038_00',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.zone_0_heat_demand',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Heat demand',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator-off',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_heat_demand',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Boiler output temperature',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_boiler_output_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Boiler return temperature',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_boiler_return_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Boiler setpoint',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_boiler_setpoint',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 CH setpoint',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_ch_setpoint',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 CH max setpoint',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_ch_max_setpoint',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'pressure',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 CH water pressure',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPressure.BAR: 'bar'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_ch_water_pressure',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 DHW flow rate',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfVolumeFlowRate.LITERS_PER_MINUTE: 'L/min'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_dhw_flow_rate',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 DHW setpoint',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_dhw_setpoint',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 DHW temperature',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_dhw_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Outside temperature',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_outside_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Relative modulation level',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_relative_modulation_level',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10E0': 86400,
          '3220': 3600,
          '3EF0': 3600,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OTB 10:123456 Max relative modulation level',
        'id': '10:123456',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.otb_10_123456_max_relative_modulation_level',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'THM 03:123456 Temperature',
        'id': '03:123456',
        'setpoint': None,
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.thm_03_123456_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038',
        'heat_demand': None,
        'heat_demands': None,
        <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
          <HVACMode.HEAT: 'heat'>,
          <HVACMode.OFF: 'off'>,
          <HVACMode.AUTO: 'auto'>,
          <HVACMode.COOL: 'cool'>,
        ]),
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermostat',
        'id': '01:145038',
        <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: None,
        <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: None,
        <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
        <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'none',
          'away',
          'custom',
          'home',
          'eco',
        ]),
        'relay_demands': None,
        <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 400>,
        'system_mode': None,
        'tpi_params': None,
      }),
      'context': <ANY>,
      'entity_id': 'climate.controller_01_145038',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'config': None,
        <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zone 0',
        'heat_demand': None,
        'heating_type': None,
        <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
          <HVACMode.AUTO: 'auto'>,
          <HVACMode.COOL: 'cool'>,
        ]),
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
        'id': '01:145038_00',
        <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
        <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
        'mode': None,
        'params': dict({
          'config': None,
          'mode': None,
          'name': None,
          'setpoint_bounds': None,
        }),
        <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
        <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'none',
          'temporary',
          'permanent',
          'away',
          'custom',
          'home',
          'eco',
        ]),
        'schedule': None,
        'schedule_version': None,
        'setpoint_bounds': None,
        <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
        <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
        <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: None,
        'zone_index': '00',
      }),
      'context': <ANY>,
      'entity_id': 'climate.zone_0',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        ]),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Learn',
        'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.learn',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        ]),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Regex Match',
        'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.regex_match',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_entities[minimal]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 System status',
        'id': '01:145038',
        'working_schema': dict({
          'orphans': list([
          ]),
          'stored_hotwater': dict({
          }),
          'system': dict({
            'appliance_control': None,
          }),
          'underfloor_heating': dict({
          }),
          'zones': dict({
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.controller_01_145038_system_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'active_faults': None,
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 Active fault',
        'id': '01:145038',
        'latest_event': None,
        'latest_fault': None,
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.controller_01_145038_active_fault',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'config': dict({
          'enforce_known_list': True,
        }),
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HGI 18:006402 Gateway status',
        'id': '18:006402',
        'is_evofw3': True,
        'known_list': list([
          dict({
            '01:145038': dict({
            }),
          }),
          dict({
            '18:006402': dict({
              'class': 'HGI',
            }),
          }),
        ]),
        'schema': dict({
          '01:145038': dict({
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.hgi_18_006402_gateway_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 System info',
        'id': '01:145038',
        'working_schema': dict({
          'orphans': list([
          ]),
          'stored_hotwater': dict({
          }),
          'system': dict({
            'appliance_control': None,
          }),
          'underfloor_heating': dict({
          }),
          'zones': dict({
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.controller_01_145038_system_info',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '01:145038',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038 Heat demand',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator-off',
        'id': '01:145038',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.controller_01_145038_heat_demand',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Controller 01:145038',
        'heat_demand': None,
        'heat_demands': None,
        <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
          <HVACMode.HEAT: 'heat'>,
          <HVACMode.OFF: 'off'>,
          <HVACMode.AUTO: 'auto'>,
          <HVACMode.COOL: 'cool'>,
        ]),
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermostat',
        'id': '01:145038',
        <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: None,
        <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: None,
        <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
        <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'none',
          'away',
          'custom',
          'home',
          'eco',
        ]),
        'relay_demands': None,
        <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 400>,
        'system_mode': None,
        'tpi_params': None,
      }),
      'context': <ANY>,
      'entity_id': 'climate.controller_01_145038',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        ]),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Learn',
        'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.learn',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        ]),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Regex Match',
        'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.regex_match',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_entities[remotes]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'battery_level': 'N/A',
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540 Battery',
        'id': '29:179540',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.rem_29_179540_battery',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'bypass_position': None,
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Bypass position',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.fan_32_157747_bypass_position',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Filter dirty',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.fan_32_157747_filter_dirty',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Frost cycle',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:snowflake-off',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.fan_32_157747_frost_cycle',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Fault',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.fan_32_157747_fault',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'config': dict({
          'enforce_known_list': True,
        }),
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HGI 18:006402 Gateway status',
        'id': '18:006402',
        'is_evofw3': True,
        'known_list': list([
          dict({
            '18:006402': dict({
              'class': 'HGI',
            }),
          }),
          dict({
            '29:179540': dict({
              'class': 'REM',
              'faked': True,
            }),
          }),
          dict({
            '32:157747': dict({
              'class': 'FAN',
            }),
          }),
        ]),
        'schema': dict({
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.hgi_18_006402_gateway_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540 Fan mode',
        'id': '29:179540',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.rem_29_179540_fan_mode',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540 Fan rate',
        'id': '29:179540',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.rem_29_179540_fan_rate',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Air quality',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_air_quality',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Bypass mode',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_bypass_mode',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'carbon_dioxide',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Carbon dioxide',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfRatio.PARTS_PER_MILLION: 'ppm'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_carbon_dioxide',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Exhaust fan speed',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_exhaust_fan_speed',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Exhaust flow',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfVolumeFlowRate.LITERS_PER_SECOND: 'L/s'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_exhaust_flow',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Exhaust temperature',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_exhaust_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Fan info',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_fan_info',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Fan mode',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_fan_mode',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Fan rate',
        'id': '32:157747',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_fan_rate',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Filter remaining',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.DAYS: 'd'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_filter_remaining',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Filter remaining (%)',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_filter_remaining_2',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Indoor humidity',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_indoor_humidity',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Indoor temperature',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_indoor_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Outdoor humidity',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_outdoor_humidity',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Outdoor temperature',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_outdoor_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Post heat',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_post_heat',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Pre heat',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_pre_heat',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Remaining time',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_remaining_time',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Supply fan speed',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_supply_fan_speed',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Supply flow',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfVolumeFlowRate.LITERS_PER_SECOND: 'L/s'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_supply_flow',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Supply temperature',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_supply_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747 Temperature',
        'id': '32:157747',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.fan_32_157747_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
        <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
        <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
          'off',
          'auto',
          'low',
          'medium',
          'high',
        ]),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747',
        <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
          <HVACMode.AUTO: 'auto'>,
          <HVACMode.OFF: 'off'>,
        ]),
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:hvac',
        <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
        <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
        <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
        <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
        <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 24>,
      }),
      'context': <ANY>,
      'entity_id': 'climate.fan_32_157747',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
        'commands': dict({
        }),
        'effective_polling_interval': dict({
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540',
        'id': '29:179540',
        <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <RemoteEntityFeature: 3>,
      }),
      'context': <ANY>,
      'entity_id': 'remote.rem_29_179540',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'on',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
        'commands': dict({
        }),
        'effective_polling_interval': dict({
          '10D0': 86400,
          '10E0': 86400,
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'FAN 32:157747',
        'id': '32:157747',
        <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <RemoteEntityFeature: 3>,
      }),
      'context': <ANY>,
      'entity_id': 'remote.fan_32_157747',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'on',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        ]),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Learn',
        'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.learn',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        ]),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Regex Match',
        'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.regex_match',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
